# extrator_gpx

./: .env  .gitignore  Cargo.toml  README.md
src/: drawing.rs  fit_adapter.rs  fit_adapters.rs  main.rs  processing.rs  strava_integration.rs  tcx_adapter.rs  utils.rs
static/: index.html  script.js  style.css
static/js/: app-init.js  file-handlers.js  loading.js  map-manager.js  notifications.js  overlay-manager.js  strava-manager.js  translations.js  video-processor.js
static/scripts/: main.js
static/scripts/modules/: api.js  i18n.js  loadingManager.js  mapManager.js  notificationManager.js  overlayManager.js
static/styles/: base.css  components-ui.css  layout.css  responsive.css  sections.css  strava.css
tests/: test_tcx_functionality.rs
