# Arquivo de Manifesto do Cargo
# Define as configurações e dependências do projeto Rust.

[package]
name = "extrator_gpx"
version = "0.1.0"
edition = "2021"

# Seção de dependências.
[dependencies]
gpx = "0.10.0"
tcx = "0.9.3"  # NOVA: Suporte para formato TCX
ffprobe = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.8"
time = "0.3"
geo-types = "0.7"

# Dependências para desenho e manipulação de imagens
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

# Novas dependências para o Servidor Web (Backend)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }

# NOVAS: Dependências para integração com Strava
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
base64 = "0.21"
url = "2.4"
tokio-util = { version = "0.7", features = ["codec"] }

# NOVA: Suporte para arquivos FIT
fitparser = "0.4.0"

# Para carregar variáveis do arquivo .env
dotenv = "0.15"